[package]
name = "short_default"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Compactly define structs with default values."
repository = "https://github.com/jonaspleyer/short_default"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
derive-syn-parse = "0.2"

[dev-dependencies]
approx = "0.5"
approx-derive = "0.2"
